--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+Copy code
+<textarea id="evaluatedText"></textarea>
+<h3 id="wordCount">0</h3>
     <script type="text/javascript" src="./script.js">
 </script>
 
